Cambio de nombre
Ajustes a nombre de archivos

--- a/First Web/index.html
+++ b/First Web/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8" />
-	<meta name="description" content="Los hot cakes mas ricos de San Mateo" />
-	<title>HotCakes Mami!</title>
+	<meta name="description" content="El mas rico menú" />
+	<title>Menú</title>
 	<link rel="shortcut icon" href="imgs/fresa.jpg" />
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" href="estilos.css" />
